[package]
authors = ["photowey <photowey@gmail.com>"]
edition = "2021"
name = "hellorust"
version = "1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "^0.8"
lazy_static = "1.4"
num_cpus = "1.16.0"
chrono = "0.4.35"
toml = "0.8"

ifcfg = "0.1.2"